--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="credit-box">
         <p class="credit-text">
             Developed & Maintained by<br>
-            <span class="author-name">LAXMI NARASIMHA REDDY</span><br>
+            <span class="author-name">kokkanti&koneru</span><br>
             <span class="glow-text">💡 built for the stars ✨</span>
         </p>
     </div>
@@ -96,4 +96,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
